[project]
name = "ktree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Lemus Perez", email = "dslemusp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "types-pyyaml>=6.0.12.20241230",
]
test = [
    "pytest>=8.3.4",
    "pytest-loguru>=0.4.0",
    "scipy>=1.15.1",
]

[tool.mypy]
exclude = ['/.venv/']
plugins = [
    "pydantic.mypy",
    "numpy.typing.mypy_plugin",
]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
implicit_reexport = true
check_untyped_defs = true
files = [
    "src",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
